# taskflow

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 2be207b43936_.py  f4f3fbbaf4d2_.py
src/: config.py  ioc.py  main.py
src/database/: postgres.py
src/exceptions/: base.py  evaluation.py  jwt.py  meeting.py  task.py  team.py  user.py
src/models/: __init__.py  admin.py  base.py  evaluation.py  meeting.py  task.py  team.py  user.py
src/repositories/: evaluation.py  meeting.py  task.py  team.py  user.py
src/routers/: admin.py  auth.py  calendar.py  evaluations.py  main_page.py  meeting.py  tasks.py  teams.py  users.py
src/schemas/: __init__.py  calendar.py  evaluation.py  meeting.py  pagination.py  response.py  task.py  team.py  token.py  user.py
src/services/: auth.py  hash.py  jwt.py
src/static/templates/: calendar.html  index.html
src/use_cases/admin/: add_team_member.py  create_team.py  delete_user.py  get_all_teams.py  get_team_info.py  team_manager.py
src/use_cases/manager/: create_evaluation.py  create_meeting.py  create_task.py  delete_meeting.py  delete_task_by_id.py  get_all_tasks.py  get_by_task_by_id.py  update_task.py
src/use_cases/user/: add_task_comment.py  calendar.py  delete.py  get_all_evaluations.py  get_user_meetings.py  join_team.py  login.py  refresh_token.py  register.py  update_user.py
tests/: conftest.py
tests/user_tests/: test_use_cases.py
